# openclaw-security-playbook

./: .dockerignore  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .yamllint  .yamllint.yml  AUDIT_ROADMAP.md  CLAUDE.md  CONTRIBUTING.md  DEBT_INVENTORY_ACTIVE.md  LICENSE  README.md  SECURITY.md  impact-assessment.json  impact-report.json  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json  settings.local.json
.claude/hooks/: post-tool-use.sh  pre-tool-use.sh  security_defaults_hook.sh
.github/: copilot-instructions.md
.github/workflows/: compliance-check.yml  detection-replay-validation.yml  lint.yml  runtime-security-regression.yml  security-scan.yml
.omc/: project-memory.json
.omc/sessions/: 0b6c99e1-b2b3-429d-9f4b-cb879be698c7.json  3bfb1618-226c-4904-85fc-aeba2f8685e0.json  42aa36c2-d3f8-408e-ab77-4e81f6149fae.json  cb5c7bd7-3ee6-4c21-b8f3-1b8e3650278a.json  cc008ef2-ead9-4072-b1ea-296e3058d17b.json
.omc/state/: hud-stdin-cache.json  mission-state.json
configs/agent-config/: environment-overrides.yml  openclaw-agent.yml  secrets-template.vault
configs/examples/: backup-restore.sh  docker-compose-full-stack.yml  monitoring-stack.yml  nginx-advanced.conf  production-k8s.yml  with-community-tools.yml
configs/mcp-server-config/: authentication.yml  firewall-rules.yml  mcp-server-hardening.yml
configs/monitoring-config/: alertmanager.yml  grafana-dashboards.yml  grafana-datasources.yml  prometheus.yml
configs/skill-policies/: README.md  (+7 more)
detections/: README.md
scripts/: README.md
tools/: certificate-manager.py  compliance-reporter.py  config-migrator.py  incident-simulator.py  openclaw-cli.py  policy-validator.py
training/: developer-guide.md  security-training.md
(+268 files in other folders)
