[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdbot"
version = "0.1.0"
description = "Minimal ClawdBot runtime and security tooling package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "click>=8.1",
  "tabulate>=0.9",
  "requests>=2.32",
  "cryptography>=44.0",
  "boto3>=1.35",
]

[project.scripts]
openclaw-cli = "clawdbot.openclaw_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]